Fix taskbar overflow
https://moduscreate.com/blog/how-to-fix-overflow-issues-in-css-flex-layouts/

--- a/layout.css
+++ b/layout.css
@@ -106,6 +106,7 @@ html, body {
 	display: flex;
 	flex: 1;
 	height: 100%;
+	min-width: 0; /* reset implicit min-width from flexbox */
 }
 .task {
 	max-width: 200px;
